syntax = "proto3";

package stream_service;

import "common.proto";
import "hummock.proto";
import "stream_plan.proto";

option java_package = "com.risingwave.proto";
option optimize_for = SPEED;

message BuildActorInfo {
  stream_plan.StreamActor actor = 1;
  message SubscriptionIds {
    repeated uint32 subscription_ids = 1;
  }
  map<uint32, SubscriptionIds> related_subscriptions = 2;
}

// Describe the fragments which will be running on this node
message UpdateActorsRequest {
  string request_id = 1;
  repeated BuildActorInfo actors = 2;
}

message UpdateActorsResponse {
  common.Status status = 1;
}

message BroadcastActorInfoTableRequest {
  repeated common.ActorInfo info = 1;
}

// Create channels and gRPC connections for a fragment
message BuildActorsRequest {
  string request_id = 1;
  repeated uint32 actor_id = 2;
}

message BuildActorsResponse {
  string request_id = 1;
  common.Status status = 2;
}

message DropActorsRequest {
  string request_id = 1;
  repeated uint32 actor_ids = 2;
}

message DropActorsResponse {
  string request_id = 1;
  common.Status status = 2;
}

message InjectBarrierRequest {
  string request_id = 1;
  stream_plan.Barrier barrier = 2;
  repeated uint32 actor_ids_to_send = 3;
  repeated uint32 actor_ids_to_collect = 4;
  repeated uint32 table_ids_to_sync = 5;
}

message BarrierCompleteResponse {
  message CreateMviewProgress {
    uint32 backfill_actor_id = 1;
    bool done = 2;
    uint64 consumed_epoch = 3;
    uint64 consumed_rows = 4;
  }
  string request_id = 1;
  common.Status status = 2;
  repeated CreateMviewProgress create_mview_progress = 3;
  message GroupedSstableInfo {
    uint64 compaction_group_id = 1;
    hummock.SstableInfo sst = 2;
    map<uint32, hummock.TableStats> table_stats_map = 3;
  }
  repeated GroupedSstableInfo synced_sstables = 4;
  uint32 worker_id = 5;
  map<uint32, hummock.TableWatermarks> table_watermarks = 6;
  repeated hummock.SstableInfo old_value_sstables = 7;
}

// Before starting streaming, the leader node broadcast the actor-host table to needed workers.
message BroadcastActorInfoTableResponse {
  common.Status status = 1;
}

message WaitEpochCommitRequest {
  uint64 epoch = 1;
}

message WaitEpochCommitResponse {
  common.Status status = 1;
}

message StreamingControlStreamRequest {
  message InitRequest {
    uint64 prev_epoch = 2;
  }

  oneof request {
    InitRequest init = 1;
    InjectBarrierRequest inject_barrier = 2;
  }
}

message StreamingControlStreamResponse {
  message InitResponse {}

  oneof response {
    InitResponse init = 1;
    BarrierCompleteResponse complete_barrier = 2;
  }
}

service StreamService {
  rpc UpdateActors(UpdateActorsRequest) returns (UpdateActorsResponse);
  rpc BuildActors(BuildActorsRequest) returns (BuildActorsResponse);
  rpc BroadcastActorInfoTable(BroadcastActorInfoTableRequest) returns (BroadcastActorInfoTableResponse);
  rpc DropActors(DropActorsRequest) returns (DropActorsResponse);
  rpc WaitEpochCommit(WaitEpochCommitRequest) returns (WaitEpochCommitResponse);
  rpc StreamingControlStream(stream StreamingControlStreamRequest) returns (stream StreamingControlStreamResponse);
}

// TODO: Lifecycle management for actors.
